welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
if (Math.abs(n-10) < 10)
{
	return true;
}
}